// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Should render Hero Heading with h1 1`] = `
<div>
  <h1
    class="font-ubuntu text-semantic-heading-hero font-core-bold leading-semantic-heading-hero space-y-semantic-paragraphSpacing-heading-hero text-semantic-typography-prominent"
  >
    Hero heading
  </h1>
</div>
`;

exports[`Heading Should render h1 Heading with h1 1`] = `
<div>
  <h1
    class="font-ubuntu text-semantic-heading-h1 font-core-bold leading-semantic-heading-h1 space-y-semantic-paragraphSpacing-heading-h1 text-semantic-typography-prominent"
  >
    h1 heading
  </h1>
</div>
`;

exports[`Heading Should render h2 Heading with h2 1`] = `
<div>
  <h2
    class="font-ubuntu text-semantic-heading-h2 font-core-bold leading-semantic-heading-h2 space-y-semantic-paragraphSpacing-heading-h2 text-semantic-typography-prominent"
  >
    h2 heading
  </h2>
</div>
`;

exports[`Heading Should render h3 Heading with h3 1`] = `
<div>
  <h3
    class="font-ubuntu text-semantic-heading-h3 font-core-bold leading-semantic-heading-h3 space-y-semantic-paragraphSpacing-heading-h3 text-semantic-typography-prominent"
  >
    h3 heading
  </h3>
</div>
`;

exports[`Heading Should render h4 Heading with h4 1`] = `
<div>
  <h4
    class="font-ubuntu text-semantic-heading-h4 font-core-bold leading-semantic-heading-h4 space-y-semantic-paragraphSpacing-heading-h4 text-semantic-typography-prominent"
  >
    h4 heading
  </h4>
</div>
`;

exports[`Heading Should render h5 Heading with h5 1`] = `
<div>
  <h5
    class="font-ubuntu text-semantic-heading-h5 font-core-bold leading-semantic-heading-h5 space-y-semantic-paragraphSpacing-heading-h5 text-semantic-typography-prominent"
  >
    h5 heading
  </h5>
</div>
`;

exports[`Heading Should render h6 Heading with h6 1`] = `
<div>
  <h6
    class="font-ubuntu text-semantic-heading-h6 font-core-bold leading-semantic-heading-h6 space-y-semantic-paragraphSpacing-heading-h6 text-semantic-typography-prominent"
  >
    h6 heading
  </h6>
</div>
`;

exports[`Heading Should render h7 Heading with h7 1`] = `
<div>
  <h6
    class="font-ubuntu text-semantic-heading-h7 font-core-bold leading-semantic-heading-h7 space-y-semantic-paragraphSpacing-heading-h7 text-semantic-typography-prominent"
  >
    h7 heading
  </h6>
</div>
`;

exports[`Text Should display correct content 1`] = `
<div>
  <p
    class="font-ibmPlex-sans text-semantic-typography-prominent text-semantic-body-md space-y-semantic-paragraphSpacing-body-md leading-semantic-body-md font-core-regular"
  >
    Text content
  </p>
</div>
`;
